@@ -1,16 +1,18 @@
 package net.ironingot.horseinforeloaded.fabric.utils;
 
+import java.util.Optional;
 import java.util.UUID;
 import java.util.List;
 
+import net.ironingot.horseinforeloaded.common.HorseInfoCore;
+import net.ironingot.horseinforeloaded.common.HorseInfoFormat;
+import net.ironingot.horseinforeloaded.fabric.render_state.HorseWithInfoRenderState;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.OwnableEntity;
 import net.minecraft.world.entity.TamableAnimal;
 import net.minecraft.world.entity.animal.horse.AbstractHorse;
 import net.minecraft.world.Nameable;
-
-import net.ironingot.horseinforeloaded.common.HorseInfoCore;
-import net.ironingot.horseinforeloaded.common.HorseInfoFormat;
 
 public class EntityUtil {
     public static String getDisplayNameString(Nameable entity)
@@ -19,12 +21,11 @@ public class EntityUtil {
     }
 
     private static String getOwnerString(UUID uuid) {
-        UUID ownerUUID = uuid;
-        if (ownerUUID == null)
-            return null;
+        if (uuid == null)
+            return "(Owner: None)";
     
         String ownerName = "Unknown";
-        ownerName = HorseInfoCore.playerNameManager.getPlayerName(ownerUUID);
+        ownerName = HorseInfoCore.playerNameManager.getPlayerName(uuid);
     
         return "(Owner: " + ownerName + ")";
     }
@@ -45,18 +46,16 @@ public class EntityUtil {
         return entity.isBaby() ? "(Baby)" : getOwnerString(entity.getOwnerUUID());
     }
 
-    public static String getDisplayNameWithRank(AbstractHorse entity) {
+    public static String getDisplayNameWithRank(HorseWithInfoRenderState renderState) {
         return HorseInfoFormat.formatHorseNameWithRank(
-            EntityUtil.getDisplayNameString(entity),
-            HorseEntityUtil.getEvaluateRankString(entity)
+            renderState.displayName,
+            HorseEntityUtil.getEvaluateRankString(renderState)
         );
     }
 
-    public static List<String> getHorseStatsString(AbstractHorse entity) {
-        List<Entity> passengers = entity.getPassengers();
-
-        if (passengers == null || passengers.size() == 0) {
-            return HorseEntityUtil.getStatsStrings(entity);
+    public static List<String> getHorseStatsString(HorseWithInfoRenderState renderState) {
+        if (renderState.rider == null) {
+            return HorseEntityUtil.getStatsStrings(renderState);
         }
         return null;
     }
@@ -64,9 +63,9 @@ public class EntityUtil {
     public static Entity getRider(Entity entity)
     {
         List<Entity> passengers = entity.getPassengers();
-        if (passengers == null || passengers.size() == 0)
+        if (passengers.isEmpty())
             return null;
 
-        return passengers.get(0);
+        return passengers.getFirst();
     }
 }
